# spin-up

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  tree-pool.toml
.github/workflows/: release-plz.yml
crates/spin-core-macros/: CHANGELOG.md  Cargo.toml
crates/spin-core-macros/src/: lib.rs  spin_core_impl.rs  spin_macro_impl.rs
crates/spin-lang/: CHANGELOG.md  Cargo.toml
crates/spin-lang/spin-core-modules/: spin-core-net.spin
crates/spin-lang/src/: ast.rs  ast_normalize.rs  builtins.rs  diagnostics.rs  lexer.rs  lib.rs  parser.rs  spin_path.rs
crates/spin-lang/src/analysis/: as_interface.rs  constraints.rs  delegate.rs  graph.rs  infer.rs  let_check.rs  mod.rs  registry.rs  resolve.rs  (+1 more)
crates/spin-lsp/: CHANGELOG.md  Cargo.toml
crates/spin-lsp/src/: backend.rs  main.rs
docs/examples/: README.md  cipherstash-proxy.spin
docs/plans/: 2026-03-28-phase1-foundation.md  2026-03-28-spin-design.md  2026-03-29-phase2-spin-core-primitives.md  2026-03-29-spin-core-primitives-design.md  2026-03-30-phase3a-language-constructs.md  2026-03-30-phase3b-static-analysis-engine.md  2026-03-30-static-analysis-design.md
editors/vscode/: extension.js  install.sh  language-configuration.json  package-lock.json  package.json
editors/vscode/syntaxes/: spin.tmLanguage.json
spin-core-modules/: spin-core-net.spin
src/: ast.rs  ast_normalize.rs  cli.rs  core_net.rs  lexer.rs  lib.rs  main.rs  parser.rs  spin_path.rs
tests/: analysis_as_interface.rs  analysis_constraints.rs  analysis_delegate.rs  analysis_graph.rs  analysis_let_check.rs  analysis_registry.rs  analysis_resolve.rs  analysis_unify.rs  ast_normalize.rs  builtins.rs  cli.rs  core_net.rs  diagnostics.rs  lexer.rs  parser.rs  spin_macro.rs  spin_path.rs
