[package]
name = "spin-up"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
logos = "0.15"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
