[workspace]
members = [".", "crates/spin-core-macros"]

[package]
name = "spin-up"
version = "0.1.1"
edition = "2024"
description = "A local development orchestrator for discerning developers with impeccable taste"
license = "MIT"
repository = "https://github.com/freshtonic/spin-up"

[[bin]]
name = "spin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
logos = "0.16.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
release-plz = "0.3.157"
tempfile = "3"
